fix tabs z-index

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
   position: sticky;
   top: 137px;
   background-color: #fff;
-  z-index: 3;
+  z-index: 4;
   flex-wrap: wrap;
 }
 .th__tab__item {
